Added pulsing glow effect to tribal borders 2

--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AmericanTribes.org</title>
   <link rel="stylesheet" href="styles/style.css" />
-
   <script src="scripts/analytics.js"></script>
-
 </head>
 
-<div id="borders-container">
-  <img src="assets/borders/new-england-border.png" id="new-england-border" class="border-overlay">
-  <img src="assets/borders/new-york-border.png" id="new-york-border" class="border-overlay">
-  <img src="assets/borders/great-lakes-border.png" id="great-lakes-border" class="border-overlay">
-  <img src="assets/borders/dixieland-border.png" id="dixieland-border" class="border-overlay">
-  <img src="assets/borders/florida-border.png" id="florida-border" class="border-overlay">
-  <img src="assets/borders/texas-border.png" id="texas-border" class="border-overlay">
-  <img src="assets/borders/great-plains-border.png" id="great-plains-border" class="border-overlay">
-  <img src="assets/borders/deseret-border.png" id="deseret-border" class="border-overlay">
-  <img src="assets/borders/northwest-border.png" id="northwest-border" class="border-overlay">
-  <img src="assets/borders/california-border.png" id="california-border" class="border-overlay">
-  <img src="assets/borders/alaska-border.png" id="alaska-border" class="border-overlay">
-</div>
-
-
 <body>
+
+  <!-- Borders Overlay -->
+  <div id="borders-container">
+    <img src="assets/borders/new-england-border.png" id="newengland-border" class="border-overlay">
+    <img src="assets/borders/new-york-border.png" id="newyork-border" class="border-overlay">
+    <img src="assets/borders/great-lakes-border.png" id="greatlakes-border" class="border-overlay">
+    <img src="assets/borders/dixieland-border.png" id="dixieland-border" class="border-overlay">
+    <img src="assets/borders/florida-border.png" id="florida-border" class="border-overlay">
+    <img src="assets/borders/texas-border.png" id="texas-border" class="border-overlay">
+    <img src="assets/borders/great-plains-border.png" id="greatplains-border" class="border-overlay">
+    <img src="assets/borders/deseret-border.png" id="deseret-border" class="border-overlay">
+    <img src="assets/borders/northwest-border.png" id="northwest-border" class="border-overlay">
+    <img src="assets/borders/california-border.png" id="california-border" class="border-overlay">
+    <img src="assets/borders/alaska-border.png" id="alaska-border" class="border-overlay">
+  </div>
+
+  <!-- Header -->
   <header>
     <img src="assets/images/tribes_logo_v2.png" alt="Tribal Confederacy Logo" style="height:80px; margin-bottom:10px;">
     <p>A New Vision for America</p>
@@ -36,6 +36,7 @@
     </nav>
   </header>
 
+  <!-- Main Content -->
   <main>
     <section class="map-section">
       <div class="tribal-map-container">
